<?xml version="1.0"?>
<package format="2">
  <name>pcr_controller</name>
  <version>0.0.0</version>
  <description>The pcr_controller package</description>

 
  <maintainer email="mike@todo.todo">mike</maintainer>


 
  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>Phidget22</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>Phidget22</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>Phidget22</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
